--- a/clusters/my-cluster/podinfo-source.yaml
+++ b/clusters/my-cluster/podinfo-source.yaml
@@ -8,5 +8,4 @@ spec:
   interval: 30s
   ref:
     branch: master
-  url: https://github.com/stefanprodan/podinfo
-
+  url: https://github.com/tzs919/podinfo
